# ailyDemo

./: .settings.toml.swp  README.md  pyproject.toml  settings.toml
.devcontainer/: devcontainer.json
aily_streamlit/: config.py  connector.py  main.py  sidebar.py
aily_streamlit/fetures/: embed.py  openapi.py
aily_streamlit/pages/: embed.py  skill.py
